# catsim

./: .coverage  .coveragerc  .coveralls.yml  .gitignore  .gitlab-ci.yml  .gitlab.yml  .pre-commit-config.yaml  .style.yapf  .travis.yml  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  cat.html  cat.py  contributing.html  deploy_docs.sh  estimation.html  genindex.html  index.html  initialization.html  introduction.html  irt.py  main.py  objects.inv  plot.html  plot.py  pyproject.toml  pytest.ini  references.html  reproducibility.html  results.py  searchindex.js  selection.html  setup.py  simulation.html  stopping.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci-cd.yml  pre-commit.yml  publish-on-release.yml  test-on-push.yaml  test-on-push.yml
_downloads/32f47e3850bfb6c2a1c4d011bc7696e4/: estimation-1.py
_images/: graphviz-80632ff27b6da190db7811b7f3f4779f8ffed487.png.map  inheritance-04eca572793bd8885ca07a35dd6bafc921e655f6.png.map  inheritance-072b5ca9660f5563c06b8dd5f8265624ecc7d001.png.map  inheritance-28c4e9cc7c8350b1bc2b09b9ddb2fa119ad08559.png.map  inheritance-40666746051365abd34b6ef064de2c48a5f56f2a.png.map  inheritance-4b2d1b3014d37f590a15cf39930bc9b5cace7a33.png.map  inheritance-dc9ca89d9926618990084174aea95f8eda72e65a.png.map  inheritance-e9a6cca5f1dc53f3e415655caf4417f5bf056d9d.png.map
_modules/: index.html
_modules/catsim/: cat.html  irt.html  selection.html  simulation.html  stopping.html
_sources/: initialization.rst.txt  introduction.rst.txt  selection.rst.txt
catsim/: Simulator.py  cat.py  estimation.py  initialization.py  irt.py  plot.py  reestimation.py  selection.py  simulation.py  stats.py  stopping.py  testing.py
catsim/cat/: irt.py  simulate.py
catsim/cluster/: batch.py  distances.py  helpers.py  hierarchical.py  kmeans.py  kmedoids.py  stats.py
catsim/distributed/: cat_server.py  cat_worker.py  misc.py
catsim/misc/: plot.py  results.py  stats.py
catsim/procedures/: MaxInfoProcedure.py  Procedure.py
catsim/tests/: test.py
cluster/: kmeans.py  kmedoids.py  stats.py
dev/: contributing.html  estimation.html  genindex.html  index.html  initialization.html  introduction.html  irt.html  objects.inv  plot.html  py-modindex.html  reproducibility.html  search.html  searchindex.js  selection.html  simulation.html  stopping.html
dev/_modules/: index.html
dev/_sources/: cat.rst.txt  index.rst.txt  irt.rst.txt  references.rst.txt  stopping.rst.txt
dev/plot_directive/: introduction-1.py  plot-1.py  plot-3.py  plot-4.py
docs/: .buildinfo  cat.html  cat.rst  catsim.Simulator.rst  catsim.cat.Procedure.rst  catsim.cat.Simulator.rst  catsim.cat.irt.rst  catsim.cat.rst  catsim.cat.simulate.rst  catsim.cluster.distances.rst  catsim.cluster.helpers.rst  catsim.cluster.kmeans.rst  catsim.cluster.kmedoids.rst  catsim.cluster.stats.rst  catsim.initialization.rst  catsim.misc.plot.rst  catsim.misc.results.rst  catsim.misc.stats.rst  catsim.reestimation.rst  catsim.selection.rst  catsim.simulation.rst  concepts.rst  conf.py  contributing.html  estimation-1.py  estimation-2.py  estimation.html  estimation.rst  examples.html  genindex.html  index.html  index.rst  initialization.html  initialization.rst  introduction-1.py  introduction.html  introduction.rst  irt-1.py  irt.html  irt.rst  (+26 more)
docs/.doctrees/: cat.doctree  contributing.doctree  estimation.doctree  examples.doctree  index.doctree  initialization.doctree  introduction.doctree  irt.doctree  plot.doctree  readme_body.doctree  readme_head.doctree  references.doctree  reproducibility.doctree  selection.doctree  simulation.doctree  stats.doctree  stopping.doctree
docs/_images/: inheritance-04eca572793bd8885ca07a35dd6bafc921e655f6.png.map  inheritance-072b5ca9660f5563c06b8dd5f8265624ecc7d001.png.map  inheritance-0874fbb89cbcf63d0da47c2669ffe8d2a5d43a90.png.map  inheritance-1ee12e436a37131462e837dc58e526b5fdf9e1e5.png.map  inheritance-272db7f0762367483902ba20ed1cfada665dbd54.png.map  inheritance-3c21b9a63a3a641c53ace2cee0b541ef0439000c.png.map  inheritance-46a53a33c01503b419f3a82aa50352bbf7e5cf74.png.map  inheritance-4b048a5aee1c55a97c923cee1f6c5f6fc0adb56a.png.map  inheritance-4b2d1b3014d37f590a15cf39930bc9b5cace7a33.png.map  inheritance-4cbd026b6a37807552089081e56cd5c4d614b61c.png.map  inheritance-57f5c51cf463e430488b0192a8546e3f4728c029.png.map  inheritance-5ecdd9a045bf67c0ed1db846b953523d8b443272.png.map  inheritance-781fc1e56255532b47d5fca11d280375c043c5bb.png.map  inheritance-7b231892f8a02e535b182e4b6d70a4e2722818e9.png.map  inheritance-879beb97c43f9d76e86d4ab156c8347baa356c19.png.map  inheritance-8962f921a9807ea71e8e1dda500910c96e3329c7.png.map  inheritance-8e5c22861b5dee0470799cccd024246b1133f2fe.png.map  inheritance-a6ddd31ba7e252bbdb84edbd873a2b711ddc01c0.png.map  inheritance-a870fdea87b791a0914b2aa21dec54cfe477329d.png.map  inheritance-c9d0a7e17412dc469b62d867d4812c1638c02761.png.map  inheritance-e675e2796ef946bbb8ee8fb21dacec24dbf4833f.png.map
docs/_modules/: index.html
docs/_sources/: estimation.rst.txt  index.rst.txt  introduction.rst.txt  irt.rst.txt  plot.rst.txt  readme_body.md.txt  readme_head.md.txt  reproducibility.rst.txt
plot_directive/: estimation-2.py  irt-1.py  plot-2.py  plot-3.py
sphinx/: Makefile  conf.py  estimation.rst  examples.rst  index.rst  introduction.rst  irt.rst  readme_body.md  readme_head.md  reproducibility.rst  stats.rst
tests/: test_cat.py  test_estimation.py  test_exceptions.py  test_initialization.py  test_integration.py  test_irt.py  test_item_bank.py  test_main.py  test_plot.py  test_selection.py  test_simulation.py  test_stopping.py
(+89 files in other folders)
