[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
urls = { homepage = "https://douglasrizzo.com.br/catsim" }
authors = [
    { name = "Douglas De Rizzo Meneghetti", email = "douglasrizzo@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education :: Testing",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
name = "catsim"
version = "0.18.0"
description = "Computerized Adaptive Testing Simulator"
dependencies = [
    "scipy",
    "numexpr",
    "matplotlib",
    "scikit-learn",
    "json_tricks",
    "tqdm",
    "numpy",
]
requires-python = ">=3.5"
readme = "README.md"
license.file = "COPYING.LESSER"

[project.optional-dependencies]
dev = ["mypy", "pylama", "autoflake", "yapf", "black", "isort"]
testing = ["pytest", "scikit-learn", "flake8", "yapf"]
docs = [
    "Sphinx",
    "numpydoc",
    "sphinx_autodoc_annotation",
    "sphinx_rtd_theme",
    "m2r2",
    "bibtex-pygments-lexer",
    "matplotlib",
]
upload = ["twine", "build"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
line-length = 120
indent-width = 2
preview = true

target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "U",
    "ANN",
    "B",
    "A",
    "C4",
    "EM",
    "EXE",
    "G",
    "PIE",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "TD",
    "PD",
    "PLE",
    "PLW",
    "PLC",
    "PLR01",
    "PLR02",
    "PLR04",
    "PLR1",
    "PLR2",
    "PLR5",
    "PLR6",
    "TRY201",
    "TRY400",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["ANN101", "D100", "E111", "E114"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
