[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
urls = { homepage = "https://douglasrizzo.com.br/catsim" }
authors = [
    { name = "Douglas De Rizzo Meneghetti", email = "douglasrizzo@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education :: Testing",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
name = "catsim"
version = "0.18.0"
description = "Computerized Adaptive Testing Simulator"
dependencies = [
    "scipy",
    "numexpr",
    "matplotlib",
    "scikit-learn",
    "json_tricks",
    "tqdm",
    "numpy",
    "typing_extensions",
]
requires-python = ">=3.10"
readme = "README.md"
license.file = "COPYING.LESSER"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
line-length = 120
indent-width = 2
preview = true

target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "U",
    "ANN",
    "B",
    "A",
    "C4",
    "EM",
    "EXE",
    "G",
    "PIE",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "TD",
    "PD",
    "PLE",
    "PLW",
    "PLC",
    "PLR01",
    "PLR02",
    "PLR04",
    "PLR1",
    "PLR2",
    "PLR5",
    "PLR6",
    "TRY201",
    "TRY400",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["ANN401", "D100", "E111", "E114"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "PLR6301",  # Test methods don't need to use self
  "PLR2004",  # Magic values are fine in tests - they're explicit test expectations
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]
docs = [
    "bibtex-pygments-lexer>=0.0.1",
    "m2r2>=0.3.4",
    "matplotlib>=3.10.6",
    "numpydoc>=1.9.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc-annotation>=1.0.post1",
    "sphinx-rtd-theme>=3.0.2",
]
testing = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.6.1",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.2",
]
